syntax = "proto3";

package com.cgi.eoss.ftep;

import "common_messages.proto";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.ftep.rpc";

service FtepServiceLauncher {
    rpc LaunchService (FtepServiceParams) returns (FtepServiceResponse);
    rpc ListWorkers (ListWorkersParams) returns (WorkersList);
}

message FtepServiceParams {
    string jobId = 1;
    string userId = 2;
    string serviceId = 3;
    repeated JobParam inputs = 4;
}

message FtepServiceResponse {
    repeated JobParam outputs = 1;
}

message ListWorkersParams {
}

message WorkersList {
    repeated Worker workers = 1;
}

message Worker {
    string host = 1;
    int32 port = 2;
    string environment = 3;
}
